# restaurant-saas

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
.sqlx/: query-03e06a9503dfa03767ac226d3e6a8dcee58113deea1a259b82470474a27d20b3.json  query-10da671903842d21142736d8a4d1f686567671221c13c04a0ddbf36327415c39.json  query-186b3ff452d175826982477c1bf80e90aaf0d2a12b4c8f12a6e6075a5f338007.json  query-35fe86e602d2d4aaf0af25853e77a7a668cc5b934cc6a070ff8de9de5020eba4.json  query-3751b9298c3fec5cd8948cd5984386dbc05d23cbfb316fafc6dcdb5adb48ef4c.json  query-3a5f04df764f22fcbe4ccff9d1fea1eb253bd89bce8c419ad1a5d94a418a6bbb.json  query-5c3023f017732f36bded167431eab3ba44e74efbc51a1e2e62575c2601d751f9.json  query-7e0d0ab1ce18c9fa41aa7e79540837c3a65a82cd56265b3ffed50f5b1128b6a7.json  query-953a07695d2c558a8e615aca9d9887c673268d0173fd00a2cc9319448276915e.json  query-a540a274c0d51df1546c7d053a86f87f3a9b596b44afeefb114f23e28c120694.json  query-ae5e426103bd0a849ee9f96d418288b0ad4c8ad5d2fd77b643a8bd77da49cd66.json  query-b4ff1b682627a8862dbf4c717dd7d8c561d2dce593647f2ef7321c4c43bbaaaf.json  query-c3b60029d3a024b45482d9c4cb8405bd8f3bab673f5095e740fcbbeeb504135e.json  query-cb919f7af4c966593fdf90e189d9f2f07337cda6acf9d653b7e355319f0c243a.json  query-ccfc4fce56ab8ca108c18323397a8f140e6af59f82cbfca5b4b27099a1359dfd.json  query-dc16decbbc3775a62fd4d9561f1dca143bacaab08a79e23ab77133bd4145fa01.json  query-e6620ec43b5a621497fa6137469a1d364d59f711d6e0dcbae30e92d1f055ffa9.json  query-ea82ae075296691ff10dd3b533e19b5006c87184475380f0e8c9cf98d6fe7734.json  query-f57f598275ec66c3fa51a1ce53f206dac5fac209f04d4765c5e9bffa15ff7f97.json
migrations/: 20260427083847_initial_schema.sql  20260501105828_change_plan_ultra_to_ultimate.sql  20260501160659_add_stripe_customer_id_to_staff_table.sql  20260502121240_make_restaurant_fields_not_null.sql
src/: config.rs  error.rs  main.rs  ratelimit.rs
src/api/: mod.rs
src/api/auth/: dto.rs  mod.rs  routes.rs  services.rs
src/api/payment/: dto.rs  mod.rs  routes.rs  services.rs
src/api/restaurant/: dto.rs  mod.rs  routes.rs  services.rs
src/api/subscription/: dto.rs  mod.rs  routes.rs  services.rs
src/db/: audit.rs  mod.rs  payment.rs  pool.rs  restaurant.rs  session.rs  staff.rs  subscription.rs
src/db/models/: audit.rs  mod.rs  restaurant.rs  session.rs  staff.rs  (+1 more)
src/middleware/: auth.rs  cors.rs
src/utils/: api_responses.rs  db.rs  mod.rs  password.rs  session.rs
(+5 files in other folders)
