[package]
name = "restaurant-saas"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
rand = { version = "0.8", features = ["std"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "any",
  "uuid",
  "postgres",
  "chrono",
] }
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
axum-extra = { version = "0.12.6", features = ["typed-header", "cookie"] }
thiserror = "2.0.18"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
argon2 = "0.5.3"
time = "0.3.47"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
